# FlpPrototype

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README  README.md  cpplint.txt  testDataSampling.cxx
Alfa/: DataBlock.h  O2EPNex.cxx  (+5 more)
Control/: CMakeLists.txt
Control/ControlFairMQ/: CMakeLists.txt
Control/ControlFairMQ/doc/: documentation-config.doxygen.in
Control/ControlFairMQ/include/: CMakeLists.txt
Control/ControlFairMQ/src/: CMakeLists.txt  Receiver.cxx  Sender.cxx  launchReceiver.cxx  launchSender.cxx
Control/StateMachine/: CMakeLists.txt
Control/StateMachine/src/: BaseControl.cxx  StateMachine.cxx
Control/StateMachine/test/: testBaseControl.cxx  testClient.cxx  testSendCommand.cxx  testStateMachine.cxx
Control/Zdaq/: CMakeLists.txt
Control/Zdaq/src/: zdaq_ctrl.cxx
Control/Zdaq/test/: testZdaq.cxx
Control/cmake/: ControlDependencies.cmake  FindZookeeper.cmake
Control/doc/: documentation-config.doxygen.in  zdaq.txt
Control/include/: CMakeLists.txt  StateMachine.h
Control/include/Control/: Version.h.in  zdaq_ctrl.h
Control/src/: BaseControl.cxx  CMakeLists.txt  StateMachine.cxx  testMain.cpp  zdaq.cpp  zdaq.cxx  zdaq.h  zdaq_ctrl.cpp  zdaq_ctrl.h
Control/test/: CMakeLists.txt  testBaseControl.cxx  testClient.cxx  testSendCommand.cxx  testStateMachine.cxx
ControlFairMQ/: CMakeLists.txt
ControlFairMQ/cmake/: CPackConfig.cmake  ControlFairMQConfig.cmake
ControlFairMQ/include/ControlFairMQ/: Receiver.h  Sender.h
ControlFairMQ/src/: CMakeLists.txt  Receiver.cxx  Sender.cxx  launchReceiver.cxx  launchSender.cxx
DataFormat/: .gitignore  CMakeLists-old.txt  CMakeLists.txt  documentation-config.doxygen.in
DataFormat/cmake/: CPackConfig.cmake  DataFormatConfig.cmake  DataFormatDependencies.cmake
DataFormat/include/: CMakeLists.txt  DataBlock.h
DataFormat/include/DataFormat/: CMakeLists.txt  DataBlock.h  DataBlockContainer.h  DataSet.h  Version.h.in
DataFormat/src/: CMakeLists.txt  DataBlock.cxx  DataBlockContainer.cxx  MemPool.cxx
DataFormat/test/: CMakeLists.txt  testDataFormat.c  testMemPool.cxx
DataSampling/: CMakeLists.txt  README
DataSampling/CMake/: CPackConfig.cmake  DataSamplingConfig.cmake.in
DataSampling/apps/: CMakeLists.txt
DataSampling/apps/DataProducer/: CMakeLists.txt  dataBlockProducerMain.cxx  dataFileProducerMain.cxx
DataSampling/apps/dataDump/: CMakeLists.txt  dataDump.cxx
DataSampling/cmake/: DataSamplingConfig.cmake  DataSamplingDependencies.cmake
DataSampling/doc/: CMakeLists.txt  DS.vsdx  documentation-config.doxygen.in
DataSampling/include/: CMakeLists.txt
DataSampling/include/DataSampling/: DataBlockProducer.h  DsInfoLogger.h  FairInjector.h  FairSampler.h  FileSampler.h  InjectSamples.h  InjectorDevice.h  InjectorFactory.h  InjectorInterface.h  MockInjector.h  MockSampler.h  SamplerFactory.h  SamplerInterface.h  Version.h.in
DataSampling/libs/datasampling/: CMakeLists.txt  DataBlockProducer.cxx  DataBlockProducer.h  DataSampling.cxx  DataSampling.h  FileSampler.cxx  FileSampler.h  MockSampler.cxx  MockSampler.h  Sampler.cxx  Sampler.h  SamplerInterface.cxx  SamplerInterface.h  Version.cxx  Version.h.in  World.cpp  World.cxx  World.h
DataSampling/src/: CMakeLists.txt  DataBlockProducer.cxx  FairInjector.cxx  FairSampler.cxx  FileSampler.cxx  InjectSamples.cxx  InjectorDevice.cxx  InjectorFactory.cxx  MockInjector.cxx  MockSampler.cxx  SamplerFactory.cxx  SamplerInterface.cxx  dataDump.cxx  dataFileProducerMain.cxx  mockFairInjector.cxx  mockFairSampler.cxx
DataSampling/test/: CMakeLists.txt  testDataBlockProducer.cxx  testDataSampling.cxx  testFairInjector.cxx  testFairSampler.cxx  testFileSampler.cxx  testHello.cxx  testInjectorDevice.cxx  testMockSampler.cxx  testSampler.cxx
GUI/: CMakeLists.txt  Handshake.php  README.md  ServerSocket.php  client.php  server.php  zmqServer.cpp
GUI/cmake/: GuiDependencies.cmake
GUI/example/: 1-Publisher.cxx  2-RequestNotification.cxx  3-FairOnData.cxx  3-FairOnData.h  3-runFairOnData.cxx  CMakeLists.txt  FairOptions.json
GUI/include/GUI/: Publisher.h  Replier.h  RequestNotifier.h  Version.h.in
GUI/java-server/: ServerThread.java
GUI/njs/: package.json
GUI/src/: CMakeLists.txt  GuiInfoLogger.h  Publisher.cxx  Replier.cxx  RequestNotifier.cxx
GUI/test/: CMakeLists.txt  testGuiRemote.cxx
GUI/ws-client/: client.php
GUI/ws-server/: server.php
GUI/ws-server-oop/: Client.php  Config.ini  Config.php  Log.php  Server.php  server.php
GUI/ws-server-oop/Exceptions/: ClientException.php  CustomException.php  OriginException.php  TCPSocketException.php  TcpException.php  WebSocketException.php  ZMQException.php  ZMQHandlerException.php
GUI/ws-server-oop/Observers/: ZMQHandler.php
GUI/ws-server-oop/TcpSocket/: ConnectedClient.php  ServerSocket.php  Socket.php  SslContext.php
GUI/ws-server-oop/WebSocket/: Frame.php  Handshake.php
GUI/ws-server/Exceptions/: HandshakeException.php  WebSocketFrameException.php
GUI/ws-server/Observers/: WSManager.php
GUI/ws-server/TCP/: ServerSocket.php  TCPHandler.php
GUI/ws-server/WebSocket/: Frame.php  HandshakeManager.php
GUI/ws-server/ZeroMQ/: ZMQHandler.php
GUI/zmq-client/: client  client-java  zmqClient  zmqClient.cpp
GUI/zmq-server/: server  zmqServer  zmqServer.cpp
QualityControlModules/: CMakeLists.txt  README.md
QualityControlModules/Common/: CMakeLists.txt
QualityControlModules/Common/src/: CMakeLists.txt  MeanIsAbove.cxx  NonEmpty.cxx
QualityControlModules/Common/test/: CMakeLists.txt  testFactory.cxx  testMeanIsAbove.cxx  testNonEmpty.cxx
QualityControlModules/Daq/: CMakeLists.txt
QualityControlModules/Daq/src/: DaqCheck.cxx  DaqTask.cxx  EverIncreasingGraph.cxx
QualityControlModules/Example/: CMakeLists.txt
QualityControlModules/Skeleton/: CMakeLists.txt
QualityControlModules/Template/: CMakeLists.txt
QualityControlModules/cmake/: CPackConfig.cmake  QualityControlModulesConfig.cmake  QualityControlModulesDependencies.cmake
projectTemplate/src/: CMakeLists.txt  Receiver.cxx  Sender.cxx  World.cxx  main.cxx  mainReceiver.cxx  mainSender.cxx
(+279 files in other folders)
